fix: small syntax fixes & method usage in Main